# DIS

./: BlueLine_Follower  BlueLine_Follower.py  README.md  RINS Final Report.docx  barrel_detection.py  cmds.txt  nav2.yaml  object_detection_node.py  prava_mapa.pgm  prava_mapa.yaml  report.txt  robot_commander.py
Homework 3/: map3.pgm  map3.yaml  map_1773048899.pgm  map_1773048899.yaml
Homework 3/dis_tutorial3/launch/: sim_turtlebot_nav.launch.py
dis_tutorial4_yellow_interfaces/: CMakeLists.txt  package.xml
dis_tutorial4_yellow_interfaces/msg/: Detection.msg
dis_tutorial4_yellow_nodes/: package.xml  setup.cfg  setup.py
dis_tutorial4_yellow_nodes/dis_tutorial4_yellow_nodes/: greeting_service.py  object_detection_node (Copy).py  object_detection_node.py  object_localizer_node (Copy).py  object_localizer_node.py  ring_color_announce_service.py
maps/: task2.pgm  task2.yaml
task1/src/dis_tutorial3/: CMakeLists.txt
task1/src/dis_tutorial3/maps/: factory.pgm  task1.pgm  task1.yaml  task1r.pgm  task1r.yaml
task1/src/dis_tutorial3/scripts/: detect_rings.py  object_detection_node.py
task1/src/dis_tutorial4_yellow_nodes/dis_tutorial4_yellow_nodes/: object_localizer_node.py
