<?xml version="1.0"?>
<package format="3">
  <name>dis_tutorial4_yellow_interfaces</name>
  <version>0.0.0</version>
  <description>Custom interfaces the yellow nodes of dis_tutorial4</description>
  <maintainer email="nikosstab@icloud.com">nickstab</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
